Working on different Layers

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,12 +1,8 @@
 cmake_minimum_required(VERSION 3.0)
 
-project(cnn)
+project(convnetwork)
 
-set(SOURCE_FILES main.cpp convnetwork.cpp ActivationLayer.cpp ConnectedLayer.cpp layer.cpp filter.cpp PoolLayer.cpp ConvolutionLayer.cpp)
-
-include_directories(lib)
-
-link_directories(lib)
+set(SOURCE_FILES main.cpp convnetwork.cpp)
 
 add_subdirectory(lib)
 
@@ -14,5 +10,5 @@ add_executable( ${PROJECT_NAME} ${SOURCE_FILES} )
 
 #links lib
 target_link_libraries( ${PROJECT_NAME} knn)
-
-install(TARGETS cnn RUNTIME DESTINATION bin)
+#RUNTIME DESTINATION bin
+install(TARGETS convnetwork)
